Simple-3-tier-app/K8s-Local/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: abdelhamid-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ahmed1399/backend-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: abdelhamid-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
